--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-tag-input-component",
+  "name": "@skizzium/react-tag-input-component",
   "description": "lightweight component for tag(s) input",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "license": "MIT",
   "author": "Harsh Zalavadiya",
   "repository": "https://github.com/hc-oss/react-tag-input-component",
